--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,6 @@
 name: TnT Deny
 main: com.trulis.TnTDeny.TnTDeny
-version: 1.3
+version: 1.3.1
+authors: trulis
 description: >
              TnT Deny!
